--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
-CC=gcc -fpic -g
+CC=gcc -fpic -O2
 DEFS=
-DEFS+=-DDEBUG
-OBJS=gs_element.o gs_node.o gs_edge.o gs_graph.o gs_common.o gs_stream.o gs_stream_dgs.o gs_id.o gs_graph_bfs.o gs_algorithm_unweighted_eccentricity.o
+#DEFS+=-DDEBUG
+OBJS=gs_element.o gs_node.o gs_edge.o gs_graph.o gs_common.o gs_stream.o gs_stream_dgs.o gs_id.o gs_graph_bfs.o gs_algorithm_unweighted_eccentricity.o gs_algorithm_diameter.o
 CFLAGS=-I/usr/local/include/eina-1 -I/usr/local/include/eina-1/eina
 CLIBS=-L/usr/local/lib -leina
 
@@ -9,7 +9,7 @@ libgs: $(OBJS)
 	$(CC) -shared -Wl,-soname,libgs.so.1.0 -o ../libgs.so.1.0 $(OBJS) $(CLIBS)
 
 .c.o :
-	$(CC) -fpic -c $(DEFS) $(CFLAGS) $<
+	$(CC) -c $(DEFS) $(CFLAGS) $<
 
 clean:
 	rm -f *.o *.d *~ ../libgs.so*
