--- a/src/Makefile
+++ b/src/Makefile
@@ -7,8 +7,13 @@ EINA_DIR=/usr/local
 CFLAGS=-I$(EINA_DIR)/include/eina-1 -I$(EINA_DIR)/include/eina-1/eina
 CLIBS=-L$(EINA_DIR)/lib -leina
 
+all: libgs libgs_cuda
+
 libgs: $(OBJS)
 	$(CC) -shared -Wl,-soname,libgs.so.1.0 -o ../libgs.so.1.0 $(OBJS) $(CLIBS)
+
+libgs_cuda:
+	make -C cuda libgs_cuda
 
 .c.o :
 	$(CC) -c $(DEFS) $(CFLAGS) $<
