--- a/src/cuda/Makefile
+++ b/src/cuda/Makefile
@@ -1,6 +1,7 @@
-CC=gcc -fPIC -O3
+include ../../common.mk
+
 NVCC=nvcc -arch sm_20 -Xcompiler -fPIC
-# -g -pg
+
 DEFS=
 #DEFS+=-DDEBUG
 OBJS=gs_cuda_diameter.o
@@ -8,8 +9,8 @@ OBJS=gs_cuda_diameter.o
 EINA_DIR=/home/gsavin/local
 CUDA_DIR=/usr/local/cuda
 
-CFLAGS=-I$(EINA_DIR)/include/eina-1 -I$(EINA_DIR)/include/eina-1/eina -I.. -I$(CUDA_DIR)/include
-CLIBS=-L$(EINA_DIR)/lib -leina -L$(CUDA_DIR)/lib64 -lcublas
+CFLAGS += -I.. -I$(CUDA_DIR)/include
+CLIBS  += -L$(CUDA_DIR)/lib64 -lcublas
 
 libgs_cuda: $(OBJS)
 	$(CC) -shared -Wl,-soname,libgs_cuda.so.1.0 -o ../../libgs_cuda.so.1.0 $(OBJS) $(CLIBS)
