Change Eina to GLIB

--- a/src/cuda/Makefile
+++ b/src/cuda/Makefile
@@ -1,22 +1,22 @@
 include ../../common.mk
 
-NVCC=nvcc -arch sm_20 -Xcompiler -fPIC
+NVCC=nvcc -arch sm_20 -Xcompiler "-fPIC"
 
-OBJS    := $(patsubst %.c,%.o,$(wildcard *.c))
-KERNELS := $(patsubst %.cu,%.o,$(wildcard *_kernel.cu))
+OBJS    := $(patsubst %.cc,%.o,$(wildcard *.cc))
+CUOBJS  := $(patsubst %.cu,%.o,$(wildcard *.cu))
 
 CUDA_DIR := /usr/local/cuda
 
 CFLAGS += -I.. -I$(CUDA_DIR)/include
 CLIBS  += -L$(CUDA_DIR)/lib64 -lcublas
 
-libgs_cuda: $(KERNELS) $(OBJS)
-	$(CC) -shared -Wl,-soname,libgs_cuda.so.1.0 -o ../../libgs_cuda.so.1.0 $(OBJS) $(KERNELS) $(CLIBS)
+libgs_cuda: $(CUOBJS) $(OBJS)
+	$(CC) -shared -Wl,-soname,libgs_cuda.so.1.0 -o ../../libgs_cuda.so.1.0 $(OBJS) $(CUOBJS) $(CLIBS)
 
-$(OBJS): %.o: %.c
-	$(CC) -c $(DEFS) $(CFLAGS) -o $@ $<
+$(OBJS): %.o: %.cc
+	$(NVCC) -c $(DEFS) $(CFLAGS) -o $@ $<
 
-$(KERNELS): %.o: %.cu
+$(CUOBJS): %.o: %.cu
 	$(NVCC) -c $(DEFS) $(CFLAGS) -o $@ $<
 
 clean:
